--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "repository": "git@github.com:verpeta/space-kwiddich-back.git",
   "author": "Vladyslav Verpeta <vladverpeta@gmail.com>",
   "license": "MIT",
+  "type": "commonjs",
   "scripts": {
+    "serve": "nodemon app.js",
     "start": "node app.js",
     "build": "yarn install --ignore-optional && yarn run lint && yarn run test",
     "lint": "./node_modules/.bin/eslint ./",
@@ -16,16 +18,19 @@
   "dependencies": {
     "@sentry/node": "6.10.0",
     "app-module-path": "^2.2.0",
+    "awilix": "^7.0.3",
+    "awilix-express": "^7.0.0",
     "body-parser": "^1.17.2",
     "clone": "^2.1.1",
     "config": "^1.26.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonschema": "1.4.0",
     "lodash": "^4.17.4",
     "raven": "^2.0.2",
     "socket.io": "^4.5.1",
     "uuid": "^3.0.1",
-    "winston": "*",
+    "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "mocha": "^10.0.0",
     "proxyquire": "^1.8.0",
     "sinon": "^2.3.4",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "nodemon": "^2.0.19"
   }
 }
