--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:coverage": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha  --print both -- --opts tests/mocha.opts -R spec ./tests"
   },
   "dependencies": {
+    "@geckos.io/phaser-on-nodejs": "^1.2.7",
+    "@geckos.io/server": "^2.2.1",
     "@sentry/node": "6.10.0",
     "app-module-path": "^2.2.0",
     "awilix": "^7.0.3",
@@ -24,9 +26,11 @@
     "clone": "^2.1.1",
     "config": "^1.26.1",
     "cors": "^2.8.5",
+    "deep-freeze-strict": "^1.1.1",
     "express": "^4.18.1",
     "jsonschema": "1.4.0",
     "lodash": "^4.17.4",
+    "phaser": "3.23.0",
     "raven": "^2.0.2",
     "socket.io": "^4.5.1",
     "uuid": "^3.0.1",
@@ -38,9 +42,9 @@
     "eslint": "^4.0.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
     "proxyquire": "^1.8.0",
     "sinon": "^2.3.4",
-    "supertest": "^3.0.0",
-    "nodemon": "^2.0.19"
+    "supertest": "^3.0.0"
   }
 }
